# aind-proteomics-annotator-gui

./: .gitignore  README.md  pyproject.toml
configs/: classes.json
scripts/: launch.sh
src/aind_proteomics_annotator/: __init__.py  __main__.py  config.py
src/aind_proteomics_annotator/gui/: admin_panel.py  block_list_panel.py  bottom_panel.py  channel_controls.py  login_dialog.py  main_window.py  overlay_widget.py  viewer_panel.py
src/aind_proteomics_annotator/models/: annotation_store.py  block_registry.py  user_session.py
src/aind_proteomics_annotator/utils/: atomic_io.py  consensus.py  csv_exporter.py
src/aind_proteomics_annotator/workers/: tiff_loader.py
tests/: conftest.py  test_annotation_store.py  test_atomic_io.py  test_block_registry.py  test_consensus.py
