[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-proteomics-annotator-gui"
version = "0.1.0"
description = "GUI for annotating 3D multi-channel proteomics TIFF blocks"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "napari[all]>=0.5.0",
    "tifffile>=2023.1.1",
    "numpy>=1.24",
    "superqt>=0.6.0",
    "qtpy>=2.4.0",
    "vispy>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.3",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.scripts]
proteomics-annotator = "aind_proteomics_annotator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
